# DFAF

./: .gitignore  CLAUDE.md  CMakeLists.txt  File.txt  MoogLadderFilter.h  PATCHING.md  README.md  deploy.sh
.claude/: settings.json
Source/: DFAFSequencer.h  DFAFVoice.h  DecayEnvelope.h  MoogLadderFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/DFAF_artefacts/Debug/AU/DFAF.component/Contents/: Info.plist
build-xcode/DFAF_artefacts/Debug/Standalone/DFAF.app/Contents/: Info.plist
build-xcode/DFAF_artefacts/Debug/VST3/DFAF.vst3/Contents/: Info.plist
build-xcode/DFAF_artefacts/Debug/VST3/DFAF.vst3/Contents/Resources/: moduleinfo.json
build-xcode/DFAF_artefacts/Debug/VST3/DFAF.vst3/Contents/_CodeSignature/: CodeResources
build-xcode/Debug/: DFAF_vst3_helper
build-xcode/JUCE/: JUCEExportConfig.cmake
build-xcode/JUCE/CMakeScripts/: ReRunCMake.make
build-xcode/JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
build-xcode/JUCE/tools/CMakeScripts/: ReRunCMake.make
